--- a/journal/202302.md
+++ b/journal/202302.md
@@ -101,11 +101,11 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 Most changes focused on making consensus deployment code more robust and easier to understand:
 
-- Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" or "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details. { _is it correct to say deployment == agenda for simplicity?_ }
+- Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" and "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details. { _can we say deployment ~= agenda for simplicity?_ }
 - Enforce [globally unique vote IDs](https://github.com/decred/dcrd/pull/3057) for different agendas. Technically it was not incorrect to reuse vote IDs, however various software in the Decred ecosystem implicitly assumes that IDs are unique across all agendas. This unwritten rule is now formalized to prevent confusion and simplify code dealing with it.
-- Simplified code that determines the status [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
+- Simplified code that tracks the status [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
 - Removed unused [database update tracking](https://github.com/decred/dcrd/pull/3065). { _minor_ }
-- Added a network parameter to [force consensus votes](https://github.com/decred/dcrd/pull/3060) to certain outcomes and activate their features accordingly. This has already been used on testing networks to quickly test features without going through an entire voting process. The way it worked though was found to be surprising behavior: "if deployment is not found in parameters for a given network, it is considered active". Other issues included complexity of testing the voting process itself, and such implicitly forced vote outcomes being invisible in commands like `getblockchaininfo`. All these issues were fixed and it is now easier to locate forced rules in the code. A safety check was also added to ensure the forced vote choices cannot be used on the main network.
+- Added a network parameter to [force consensus votes](https://github.com/decred/dcrd/pull/3060) to certain outcomes and activate their features accordingly. This has already been used on testing networks to quickly test features without going through an entire voting process. The way it worked though was found to be surprising behavior: "if deployment is not found in parameters for a given network, it is considered active". Other issues included complexity of testing the voting process itself, and such implicitly forced votes being invisible in commands like `getblockchaininfo`. All these issues were fixed and it is now easier to locate forced rules in the code. A safety check was also added to ensure the forced vote choices cannot be used on the main network.
 
 Docker:
 
@@ -118,9 +118,11 @@ Other:
 - Switch to new [atomic types](https://github.com/decred/dcrd/pull/3053) in unexported modules thanks to Go 1.19. This makes the code less prone to human error and a bit less verbose. Exported modules are upgraded in a [separate PR](https://github.com/decred/dcrd/pull/3054) which will be merged later to [not force the consumers](https://github.com/decred/dcrd/pull/3054#issuecomment-1428189607) to newer Go versions too soon.
 - Updated [connection request](https://github.com/decred/dcrd/pull/3055) tracking to prevent concurrency bugs.
 - Fixed building on OpenBSD on [riscv64](https://github.com/decred/dcrd/pull/3049) CPU architecture.
-- { _dep upgrades https://github.com/decred/dcrd/pull/3050 - keep PR numbers for Ctrl+F search and remove in the final polish round_ }
+- Updated to use latest [`term` module](https://github.com/decred/dcrd/pull/3050). { _minor_ }
 - Updated build infra and docs for [Go 1.20](https://github.com/decred/dcrd/pull/3052) and dropped support for Go 1.18.
 - Preapared a new version of the [`apbf` module](https://github.com/decred/dcrd/pull/3061) (Age-Partioned Bloom Filters) with updated `siphash` dependency { _minor_ }
+
+{ _keep minor stuff until the final pass, then group it as necessary_ }
 
 
 ### dcrwallet
@@ -130,7 +132,7 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 { _Check_ https://github.com/decred/dcrwallet/commits/master }
 
 - Fixed a deadlock in [address discovery](https://github.com/decred/dcrwallet/pull/2204) that could be triggered by poorly timed `getnewaddress` command.
-- [Updated](https://github.com/decred/dcrwallet/pull/2206) the `addrmgr` module from dcrd for performance improvements under SPV mode when few quality peers are available.
+- Updated the [`addrmgr` module](https://github.com/decred/dcrwallet/pull/2206) from dcrd for performance improvements under SPV mode when few quality peers are available.
 - Updated [golang.org/x modules](https://github.com/decred/dcrwallet/pull/2209), including newer `x/sys` to support building on [OpenBSD](https://github.com/decred/dcrwallet/pull/2208) running on riscv64 CPU.
 
 
@@ -165,7 +167,7 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 - Check if the [VSP is closed](https://github.com/decred/vspd/pull/369) much earlier, before dcrd/dcrwallet/database clients are initialized. This is more efficient and prevents possible errors.
 - Updated to [Go 1.20](https://github.com/decred/vspd/pull/368).
 - Tests are now run as [sub-tests](https://github.com/decred/vspd/pull/365) to enable better reporting of test results and metrics.
-- Added tests for [error handling](https://github.com/decred/vspd/pull/363) in the client that ensure vspd errors are correctly wrapped, and non-vspd errors contain adequate information for debugging. { _maybe simplify Go details a bit_ }
+- Added tests for [error handling](https://github.com/decred/vspd/pull/363) in the client that ensure vspd errors are correctly formatted, and non-vspd errors contain adequate information for debugging. { _maybe simplify Go details a bit_ }
 - Removed [dcrstakepool instructions](https://github.com/decred/vspd/pull/370) from documentation as it is now defunct.
 - Fixes to [config log levels](https://github.com/decred/vspd/pull/371). { _minor_ }
 
