--- a/journal/202302.md
+++ b/journal/202302.md
@@ -262,14 +262,14 @@ Ethereum:
 - Attempt to use a lower gas limit for [batched swaps](https://github.com/decred/dcrdex/pull/2143) (multiple swaps in one transaction) before failing for having low reserved funds.
 - Adjusted [fee estimate](https://github.com/decred/dcrdex/pull/2139) to lower and more realistic amounts.
 - Improved management of [known and compliant RPC providers](https://github.com/decred/dcrdex/pull/2102).
-- Build with `go-ethereum` code [by default](https://github.com/decred/dcrdex/pull/2157). There is now a `nolgpl` build flag to build DEX without Ethereum code, which is licensed as GNU Lesser General Public License (LGPL). The burden of this license may be unacceptable for closed source software using DCRDEX.
-- Create wallet dir if it does not exist and [log less details](https://github.com/decred/dcrdex/pull/2159) for RPC provider checks.
+- Build with [go-ethereum](https://github.com/ethereum/go-ethereum) code [by default](https://github.com/decred/dcrdex/pull/2157). go-ethereum is popular Ethereum software that powers ETH and ERC-20 support in DCRDEX. Unlike the DEX, it is licensed as GNU Lesser General Public License (LGPL). The burden of this license may be unacceptable for closed source software willing to use DCRDEX and so a flag was added to exclude go-ethereum from the build.
+- Create wallet directory if it does not exist and [log less details](https://github.com/decred/dcrdex/pull/2159) for RPC provider checks.
 - Enabled ETH and USDC on [mainnet](https://github.com/decred/dcrdex/pull/2013). Adjusted gas limits for latest observation. Reduced redeem transaction confirmations from 10 to 3 since reorgs are [considered](https://github.com/decred/dcrdex/commit/5c1ff8ab05a43b431f6d8e091692c32ea181e937) very unlikely after The Merge. Smart contract enthusiasts can find swap contract for for ETH [here](https://etherscan.io/address/0x8c17e4968b6903e1601be82ca989c5b5e2c7b400#code), for ERC-20 [here](https://etherscan.io/address/0x1bbd020ddd6dc01f974aa74d2d727b2a6782f32d#code).
 - Fixed new block headers not being detected over [WebSockets](https://github.com/decred/dcrdex/pull/2091).
 - Fixed attempts to handle [tip change](https://github.com/decred/dcrdex/pull/2138) event for unconnected token wallets.
 - Fixed attempts to use RPC providers that serve [too old block headers](https://github.com/decred/dcrdex/pull/2074) (i.e. are not synced with the network).
 
-Ethereum's ["The Merge"](https://ethereum.org/en/upgrades/merge/) upgrade to proof-of-stake consensus had a side effect of [bricking light clients](https://github.com/ethereum/go-ethereum/issues/25623), while they were [expected](https://blog.ethereum.org/2021/03/24/finalized-no-24) to be supported. This has delayed DCRDEX v0.6 quite a bit as a workaround had to be developed. Until [light clients](https://geth.ethereum.org/docs/fundamentals/les) are fixed DEX users will have a choice of running a full node or using centralized chain data providers like [Infura](https://www.infura.io/), [Ankr](https://www.ankr.com/), and [8 others](https://github.com/decred/dcrdex/blob/80b0531a64a806ac8901d812b1e322418118cac1/client/asset/eth/multirpc.go).
+Ethereum's upgrade to proof-of-stake consensus (also called [The Merge](https://ethereum.org/en/upgrades/merge/)) happened to [brick the light client](https://github.com/ethereum/go-ethereum/issues/25623) used by DCRDEX despite some [claims](https://blog.ethereum.org/2021/03/24/finalized-no-24) it will be supported. This has delayed DCRDEX v0.6 quite a bit while a workaround had to be developed. Until [light clients](https://geth.ethereum.org/docs/fundamentals/les) are fixed DEX users will have a choice of running a full node or using centralized chain data providers like [Infura](https://www.infura.io/), [Ankr](https://www.ankr.com/), and [8 others](https://github.com/decred/dcrdex/blob/80b0531a64a806ac8901d812b1e322418118cac1/client/asset/eth/multirpc.go).
 
 
 ### dcrdata
@@ -289,8 +289,8 @@ _[Timestamply](https://github.com/decred/dcrtimegui) is a free service for times
 
 { _Check_ https://github.com/decred/dcrtimegui }
 
-- Full site [redesign](https://github.com/decred/dcrtimegui/pull/151) we covered in [January](202301.md#timestamply) has been finalized and deployed at [timestamp.decred.org](https://timestamp.decred.org/). All existing data has been [migrated](https://proposals.decred.org/record/855a506/comments/20).
-- Added an API method that returns [last digests](https://github.com/decred/dcrtime/pull/84) timestamped by the dcrtime server. It is used by the redesigned GUI.
+- Full site [redesign](https://github.com/decred/dcrtimegui/pull/151) announced in [January](202301.md#timestamply) has been finalized and deployed at [timestamp.decred.org](https://timestamp.decred.org/). All existing data has been [migrated](https://proposals.decred.org/record/855a506/comments/20).
+- Added an API method that returns [last digests](https://github.com/decred/dcrtime/pull/84) timestamped by the dcrtime server. It is used by the new GUI.
 - Upgraded to [Node v16](https://github.com/decred/dcrtimegui/pull/152).
 
 
@@ -315,14 +315,14 @@ _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new peer-to-peer 
 
 }
 
-Common changes GUI and CLI apps in v0.1.4:
+Common changes GUI and CLI apps in v0.1.4 release:
 
 - Added support for paying and sending [multiple messages in parallel](https://github.com/companyzero/bisonrelay/pull/98) without waiting for server ack.
-- Upgraded to build and test against [Go 1.20](https://github.com/companyzero/bisonrelay/pull/127) { _minor_ }
+- Upgraded to build and test against [Go 1.20](https://github.com/companyzero/bisonrelay/pull/127). { _minor_ }
 - [Store received messages](https://github.com/companyzero/bisonrelay/pull/110) so that `clientrpc` users may retrieve them. This prevents missed messages in bots and other automation tools.
 - Added support for [sending and rendering of embeds](https://github.com/companyzero/bisonrelay/pull/118) (images, other attachments, and download links) in private and group chats.
-- Tracking of encryption status and [key exchange (KX) resets](https://github.com/companyzero/bisonrelay/pull/116) were made easier. Added semi-automatic tools to detect and reset possibly broken key exchanges. Candidates for reset are users from which no messages have been received for a long time, or own client that has been offline for a long time.
-- Improved handling of new [group chat messages](https://github.com/companyzero/bisonrelay/pull/130) received just after connecting to the server. This should properly order messages by time, especially on slower connections.
+- Tracking of encryption status and [key exchange (KX) resets](https://github.com/companyzero/bisonrelay/pull/116) were made easier. Added semi-automatic tools to detect and reset possibly broken key exchanges. Candidates for reset are users from which no messages have been received for a long time, or all users if own client has been offline for a long time.
+- Improved handling of new group chat messages received just [after connecting](https://github.com/companyzero/bisonrelay/pull/130) to the server. This should properly order messages by time, especially on slower connections.
 - Added API method to [close the socket](https://github.com/companyzero/bisonrelay/pull/133). { _minor_ }
 - Fixed a bug that prevented [clean shutdown](https://github.com/companyzero/bisonrelay/commit/ec5637968937439eb8752aa41200947051b2f8c0) in some cases.
 - Fixed a possibility of client trying to [reuse message payment](https://github.com/companyzero/bisonrelay/pull/131), leading to connection loops.
@@ -330,15 +330,15 @@ Common changes GUI and CLI apps in v0.1.4:
 GUI app changes in v0.1.4:
 
 - Added [font size setting](https://github.com/companyzero/bisonrelay/pull/117) with 4 size choices.
-- Moved menu actions on users and group chats (List Posts, Pay Tip, etc.) to the right-side [panel](https://github.com/companyzero/bisonrelay/pull/119). This is similar to Element and easier to use.
+- Moved menu actions on users and group chats (List Posts, Pay Tip, etc.) to the [right-side panel](https://github.com/companyzero/bisonrelay/pull/119). This is similar to Element and easier to use.
 - Order of chat lists is [saved](https://github.com/companyzero/bisonrelay/pull/111) across app restarts.
 - Use [emoji font](https://github.com/companyzero/bisonrelay/commit/41fd091af874512d7a3d941f094c1615e54ee70b) to render more characters.
 
 Command-line app changes in v0.1.4:
 
-- Dependency upgrades { 129 }
+- Dependency upgrades. { 129 }
 - Removed initial [connection timeouts](https://github.com/companyzero/bisonrelay/pull/128) which are no longer needed since the user can reliably quit the app during startup.
-- Removed quitting the app with Ctrl+C (Ctrl+Q remains).
+- Removed Ctrl+C as a quit shortcut.
 - Removed [auto-scroll to bottom](https://github.com/companyzero/bisonrelay/commit/9324add82f4f7bd5317a31f14c8f78618e79e856) if the view was not at the bottom to begin with.
 - Alert current window of [completed download](https://github.com/companyzero/bisonrelay/commit/fdad19d95a140125019daa5bbb929ed6892df2f2).
 - Added [unread message marker](https://github.com/companyzero/bisonrelay/commit/e03164fcdf3c168cb772bde17310a003de8418f6) to inactive windows.
@@ -349,12 +349,12 @@ Command-line app fixes in v0.1.4:
 
 Server changes in v0.1.4:
 
-- Added support for accepting multiple messages [concurrently](https://github.com/companyzero/bisonrelay/pull/97), which makes sending much faster. By default a connected client can request up to 8 invoices for message sending, before needing to pay for them. Server must detect the payment within 24 hours, otherwise a new payment will be required. Production server may use other config values for this.
+- Added support for accepting multiple messages [concurrently](https://github.com/companyzero/bisonrelay/pull/97), which makes sending much faster. By default a connected client can request up to 8 invoices for message sending before needing to pay for them. Server must detect the payment within 24 hours, otherwise a new payment will be required. Production server may use other config values for this.
 
-Common changes GUI and CLI apps `master` towards the next release (v0.1.5):
+Common changes GUI and CLI apps merged in `master` towards the next release (v0.1.5):
 
 - Added a [warning](https://github.com/companyzero/bisonrelay/pull/139) alerting the user of LN invoice generation failure and suggesting to increase receive capacity.
-- Added [versioning of group chats](https://github.com/companyzero/bisonrelay/pull/140) and a warning when receiving an unsupported group chat version.
+- Added [versioning of group chats](https://github.com/companyzero/bisonrelay/pull/140) and a warning of an unsupported group chat version.
 - Added a command to [resend group chat info](https://github.com/companyzero/bisonrelay/commit/dc63dafcad9dad4e1db105418e642ea50349896f) to its members to fix issues with the user list getting out of sync.
 - Fixed [group chat message ordering](https://github.com/companyzero/bisonrelay/pull/136) after app restart.
 
@@ -369,14 +369,14 @@ GUI app changes in `master`:
 CLI app changes in `master`:
 
 - Simplified code for opening channels and [requesting receive capacity](https://github.com/companyzero/bisonrelay/pull/147).
-- Allow to specify custom [addresses](https://github.com/companyzero/bisonrelay/pull/149) that the embedded dcrlnd instance will listen to instead of the default `127.0.0.1`. This gives more flexibility in connecting to it.
+- Allow to specify custom [addresses](https://github.com/companyzero/bisonrelay/pull/149) that the embedded dcrlnd instance will listen to instead of the default `127.0.0.1`.
 - Improved [text wrapping](https://github.com/companyzero/bisonrelay/pull/132) and rendering of multiline elements.
 
 Other changes in `master`:
 
 - Added [key exchange mediation](https://github.com/companyzero/bisonrelay/pull/134) request via automation API. { _too internal_ }
 - Added [author nickname](https://github.com/companyzero/bisonrelay/pull/151) to post status updates in the automation API. { _group?_ }
-- Test fixes { 138 }
+- Test fixes. { 138 }
 
 Other stuff:
 
