--- a/journal/202302.md
+++ b/journal/202302.md
@@ -360,25 +360,18 @@ Welcome the new first-time contributors:
 
 - {@handle} ([{Project}]({ link to user's commits, DM profile, etc. }))
 
-{ _Check CMS, remove if none._ } Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}).
-
-{ _Welcome new corporate contractors with short intros._ }
-
 { _Status updates from existing contractors._ }
 
 { _Interviews with contributors. Link the interview and add a fun/strong quote._ }
 
-Community stats as of {date} (compared to {date}):
+Community stats as of Mar 1 (compared to Feb 2):
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{}), verified to post: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-
-{ _Optional: List/link notable SM dynamics._ }
+- [Twitter](https://twitter.com/decredproject) followers: 53,064 (-204)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,660 (-3)
+- [Matrix](https://chat.decred.org/) #general users: 750 (+8)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,557, verified to post: 932 (+6)
+- [Telegram](https://t.me/Decred) users: 2,756 (-60)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,630 (-10), views: 224.6K (+2.3K)
 
 
 ## Governance
