--- a/journal/202302.md
+++ b/journal/202302.md
@@ -378,15 +378,9 @@ There were no new proposals published in Feb, and the proposals which finished v
 
 ## Network
 
-{ _Hint: "Network" tracks key "health" metrics of the fundamental infrastructure._ }
-
-{ _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
-
 **Hashrate**: February's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~73 Ph/s and closed ~71 Ph/s, bottoming at 60 Ph/s and peaking at 83 Ph/s throughout the month.
 
 Distribution of 66 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Mar 1: Poolin 51%, F2Pool 38%, AntPool 11%, CoinMine 0.4%.
-
-{ _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Mar 1: Poolin 54%, F2Pool 36%, AntPool 6%, likely BTC.com 4%.
 
@@ -394,7 +388,7 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 8.76-9.69 million DCR, meaning that 58.5-64.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
-{ _Add a recap of ticket price action if it was interesting._ }
+{ _Add a recap of insane ticket price action._ }
 
 **VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~7,410 (-980) live tickets, which was 18.4% of the ticket pool (-0.4%) as of Mar 1.
 
@@ -402,7 +396,7 @@ The only gainers in February were dcrhive.com (+383 tickets or +74%) and vsp.dec
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed between 175 and 188 dcrd nodes throughout the month. Versions of 176 nodes seen on Mar 1: v1.7.5 - 34%, v1.7.2 - 22%, v1.8.0 dev builds - 13%, v1.7.2 - 11%, v1.7.0 - 10%, v1.7.4 - 3%, other - 7%.
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 59.2-60.4%. Daily [mixed volume](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 206-865K DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 59.2-60.4%. Daily [mixed volume](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 206-865K DCR.
 
 Since a large potion of staked DCR is mixed, the unusual volatility of staked volume caused volatility in mixed volume.
 
