--- a/journal/202302.md
+++ b/journal/202302.md
@@ -380,25 +380,57 @@ There were no new proposals published in Feb, and the proposals which finished v
 
 **Hashrate**: February's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~73 Ph/s and closed ~71 Ph/s, bottoming at 60 Ph/s and peaking at 83 Ph/s throughout the month.
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Network_Daily_Hashrate.png) { _upload 202302.2_ }
+
+_Image: Decred hashrate._
+
 Distribution of 66 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Mar 1: Poolin 51%, F2Pool 38%, AntPool 11%, CoinMine 0.4%.
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Mar 1: Poolin 54%, F2Pool 36%, AntPool 6%, likely BTC.com 4%.
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Daily_Hash_Dist.png) { _upload 202302.3_ }
+
+_Image: Historical pool hashrate distribution._
+
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 207-496.5 DCR, with 30-day [average](https://dcrstats.com/) at 263.8 DCR (+51.3).
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Staking_Daily_TicketPrice_DCR.png) { _upload 202302.4_ }
+
+_Image: Ticket price made its biggest swing in history._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 8.76-9.69 million DCR, meaning that 58.5-64.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
 { _Add a recap of insane ticket price action._ }
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Staking_Daily_TicketPoolVal_DCR.png) { _upload 202302.5_ }
+
+_Image: Drop and recovery of DCR locked in PoS._
+
 **VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~7,410 (-980) live tickets, which was 18.4% of the ticket pool (-0.4%) as of Mar 1.
 
 The only gainers in February were dcrhive.com (+383 tickets or +74%) and vsp.decredcommunity.org (+202 tickets or +38%). The other 14 VSPs lost ~25% tickets on average, but the loss should be considered in context of the ticket pool size correcting from abnormal ~44,880 down to its target of 40,960 ticket.
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload 202302.6_ }
+
+_Image: Distribution of tickets managed by VSPs._
+
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed between 175 and 188 dcrd nodes throughout the month. Versions of 176 nodes seen on Mar 1: v1.7.5 - 34%, v1.7.2 - 22%, v1.8.0 dev builds - 13%, v1.7.2 - 11%, v1.7.0 - 10%, v1.7.4 - 3%, other - 7%.
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Daily_NodeDistribution.png) { _upload 202302.7_ }
+
+_Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. NOTE: Data until Jan 2023 was incomplete._
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 59.2-60.4%. Daily [mixed volume](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 206-865K DCR.
 
 Since a large potion of staked DCR is mixed, the unusual volatility of staked volume caused volatility in mixed volume.
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Stakeshuffle_Daily_MixedUnspent_PC.png) { _upload 202302.8_ }
+
+_Image: Drop and recovery of mixed and unspent coin percentage._
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Stakeshuffle_Daily_Volume_DCR.png) { _upload 202302.9_ }
+
+_Image: Daily mix volume varied more than usual._
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 158 nodes (+11), 305 channels (+44) with a total capacity of 115 DCR (+9), as of Mar 1. These stats vary depending on the LN node. For example, @karamble's node reported 172 nodes (+12), 385 channels (+38) and 168 DCR (+9) capacity on same Mar 1.
 
