Dev add reminders for DEX and BR images

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -22,6 +22,8 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - Timestamply redesign is live
 
+- Ticket price epic swing and ATH
+
 - Any other?
 
 }
@@ -253,6 +255,8 @@ Umbrel app store integration:
 - New repository added to Decred GitHub organization for hosting [Umbrel integration](https://github.com/decred/umbrel-app-store) code. Umbrel users can follow the instructions to add the repository and install the DCRDEX package.
 - DCRDEX package was submitted to [official Umrel app store](https://github.com/getumbrel/umbrel-apps/pull/430) for review. Unlike custom Community app stores it requires centralized approval.
 
+{ _any image to show?_ }
+
 
 ### Timestamply
 
@@ -341,6 +345,8 @@ Other changes in `master`:
 Other stuff:
 
 - Oprah is out. It is a tipping bot following and rewarding authors of substantive posts or comments. { https://www.youtube.com/watch?v=Yz-IPu00eDc&t=113s }
+
+{ _v0.1.4 screenshot would be nice to have_ }
 
 
 ## People
