--- a/journal/202302.md
+++ b/journal/202302.md
@@ -448,17 +448,17 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 15
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
 
-Monde PR’s achievements: 
+Monde PR's achievements: 
 
-- Secured one media interview
-- Pitched three commentary opportunities 
-- Pitched four media opportunities 
+- Secured 1 media interview
+- Pitched 3 commentary opportunities 
+- Pitched 4 media opportunities 
 
 Secured the following media placements:
 
-- Bison Relay was featured in [Blockworks](https://blockworks.co/news/web3-social-media-apps-to-watch) as a ‘Web3 social media app to watch.’
-- A [Decred Magazine article](https://www.decredmagazine.com/planbs-s2f-model-is-flawed/) featuring commentary from @jz on the flaws in PlanB’s S2F model.
-- A [Decred Magazine article](https://www.decredmagazine.com/middlemen-need-to-be-eliminated-from-the-cryptocurrency-space/) featuring commentary from @jz on eliminating middlemen from the cryptocurrency space. 
+- Bison Relay was featured in [Blockworks](https://blockworks.co/news/web3-social-media-apps-to-watch) as a "Web3 social media app to watch".
+- A [Decred Magazine article](https://www.decredmagazine.com/planbs-s2f-model-is-flawed/) featuring commentary from @jz on the flaws in PlanB's S2F model.
+- A [Decred Magazine article](https://www.decredmagazine.com/middlemen-need-to-be-eliminated-from-the-cryptocurrency-space/) featuring commentary from @jz on eliminating middlemen from the cryptocurrency space.
 
 
 ## Events
