--- a/journal/202302.md
+++ b/journal/202302.md
@@ -467,13 +467,9 @@ Secured the following media placements:
 
 **Attended:**
 
-- {}
+- @arij organized a celebration of Decred's 7th anniversary at Technopark Casablanca for around 60 guests. The event began with a presentation of the project and its major milestones over the years, followed by remarks from the project's partners. New version of Decred Cake was spotted at the party.
 
-**Upcoming:**
-
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{ _Announcements from events ppl._ }
+{ image: https://twitter.com/khalidesitra/status/1622964040640208898 -> 2nd photo as 202302.12 }
 
 
 ## Media
