Media use standard Sentence case

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -492,7 +492,7 @@ Secured the following media placements:
 
 - [Middlemen need to be eliminated from the cryptocurrency space](https://www.decredmagazine.com/middlemen-need-to-be-eliminated-from-the-cryptocurrency-space/) by @HassanMaishera
 - [$3.8 billion worth of crypto stolen! What can be done?](https://www.decredmagazine.com/u-3-8-billion-worth-of-crypto-stolen-what-can-be-done/) by @JoaoPaulo
-- [Internet Privacy and Why it is Important](https://www.decredmagazine.com/internet-privacy-and-why-it-is-important/) by @BlockchainJew
+- [Internet privacy and why it is important](https://www.decredmagazine.com/internet-privacy-and-why-it-is-important/) by @BlockchainJew
 - [Decred vs Firo: privacy and governance!](https://www.decredmagazine.com/decred-vs-firo-privacy-and-governance/) by @JoaoPaulo
 
 
@@ -502,22 +502,22 @@ Secured the following media placements:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [Installing Decrediton in Fully Validating Mode - Decred Fundamentals](https://www.youtube.com/watch?v=JxLMi5fWL80) by @PhoenixGreen
-- [Decred News - ERC20 Pairs on DEX, New Ticket price ATH, exciting new Proposals for DCR DAO & More](https://www.youtube.com/watch?v=9fJ92YxL_pU) by @Exitus.
+- [Installing Decrediton in fully validating mode - Decred Fundamentals](https://www.youtube.com/watch?v=JxLMi5fWL80) by @PhoenixGreen
+- [Decred News - ERC20 pairs on DEX, new ticket price ATH, exciting new proposals for DCR DAO & more](https://www.youtube.com/watch?v=9fJ92YxL_pU) by @Exitus.
 - [Decrediton SPV mode and importing seed phrase - Decred Fundamentals](https://www.youtube.com/watch?v=K1zUdxsrgJM) by @PhoenixGreen
-- [Decrediton Peer to Peer Payments - Send & Receive](https://www.youtube.com/watch?v=DRWJ9Ajh6II) by @PhoenixGreen
+- [Decrediton peer to peer payments - send & receive](https://www.youtube.com/watch?v=DRWJ9Ajh6II) by @PhoenixGreen
 - [David Vorick on Fairness in ASIC Production & Proof-of-Work: A Deep Dive Discussion](https://www.youtube.com/watch?v=n8Wz5Zx0MSs) by @Tivra Feat. @DavidVorick
 - [Bison Relay updates to version 0.1.4](https://www.youtube.com/watch?v=Yz-IPu00eDc) by @PhoenixGreen
 
 Livestream:
 
-- [Decred Roundtable - The Next Crypto Craze](https://www.youtube.com/watch?v=ntJO1Ckmj4M) feat. @PhoenixGreen, @Exitus, DCR_Jay, and @Laurent.
+- [Decred Roundtable - The next crypto craze](https://www.youtube.com/watch?v=ntJO1Ckmj4M) feat. @PhoenixGreen, @Exitus, DCR_Jay, and @Laurent.
 
 **Audio:**
 
 Twitter Spaces:
 
-- [Decred’s 7th Birthday Bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra Feat. Decred Community.
+- [Decred’s 7th birthday bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra Feat. Decred Community.
 
 **Art and fun:**
 
@@ -533,7 +533,7 @@ From the article:
 
 **Non-English content:**
 
-- [Weekly Crypto Market Review & Decred](https://www.youtube.com/watch?v=ZLBrCKKNkPs) by @FIMA (Croatian).
+- [Weekly crypto market review & Decred](https://www.youtube.com/watch?v=ZLBrCKKNkPs) by @FIMA (Croatian).
 
 **Discussions:**:
 
