Media use standard usernames

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -491,9 +491,9 @@ Secured the following media placements:
 **Selected articles:**
 
 - [Middlemen need to be eliminated from the cryptocurrency space](https://www.decredmagazine.com/middlemen-need-to-be-eliminated-from-the-cryptocurrency-space/) by @HassanMaishera
-- [$3.8 billion worth of crypto stolen! What can be done?](https://www.decredmagazine.com/u-3-8-billion-worth-of-crypto-stolen-what-can-be-done/) by @JoaoPaulo
+- [$3.8 billion worth of crypto stolen! What can be done?](https://www.decredmagazine.com/u-3-8-billion-worth-of-crypto-stolen-what-can-be-done/) by @Joao
 - [Internet privacy and why it is important](https://www.decredmagazine.com/internet-privacy-and-why-it-is-important/) by @BlockchainJew
-- [Decred vs Firo: privacy and governance!](https://www.decredmagazine.com/decred-vs-firo-privacy-and-governance/) by @JoaoPaulo
+- [Decred vs Firo: privacy and governance!](https://www.decredmagazine.com/decred-vs-firo-privacy-and-governance/) by @Joao
 
 
 **Videos:**
@@ -502,22 +502,22 @@ Secured the following media placements:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [Installing Decrediton in fully validating mode - Decred Fundamentals](https://www.youtube.com/watch?v=JxLMi5fWL80) by @PhoenixGreen
+- [Installing Decrediton in fully validating mode - Decred Fundamentals](https://www.youtube.com/watch?v=JxLMi5fWL80) by @phoenixgreen
 - [Decred News - ERC20 pairs on DEX, new ticket price ATH, exciting new proposals for DCR DAO & more](https://www.youtube.com/watch?v=9fJ92YxL_pU) by @Exitus.
-- [Decrediton SPV mode and importing seed phrase - Decred Fundamentals](https://www.youtube.com/watch?v=K1zUdxsrgJM) by @PhoenixGreen
-- [Decrediton peer to peer payments - send & receive](https://www.youtube.com/watch?v=DRWJ9Ajh6II) by @PhoenixGreen
-- [David Vorick on Fairness in ASIC Production & Proof-of-Work: A Deep Dive Discussion](https://www.youtube.com/watch?v=n8Wz5Zx0MSs) by @Tivra Feat. @DavidVorick
-- [Bison Relay updates to version 0.1.4](https://www.youtube.com/watch?v=Yz-IPu00eDc) by @PhoenixGreen
+- [Decrediton SPV mode and importing seed phrase - Decred Fundamentals](https://www.youtube.com/watch?v=K1zUdxsrgJM) by @phoenixgreen
+- [Decrediton peer to peer payments - send & receive](https://www.youtube.com/watch?v=DRWJ9Ajh6II) by @phoenixgreen
+- [David Vorick on Fairness in ASIC Production & Proof-of-Work: A Deep Dive Discussion](https://www.youtube.com/watch?v=n8Wz5Zx0MSs) by @Tivra Feat. David Vorick
+- [Bison Relay updates to version 0.1.4](https://www.youtube.com/watch?v=Yz-IPu00eDc) by @phoenixgreen
 
 Livestream:
 
-- [Decred Roundtable - The next crypto craze](https://www.youtube.com/watch?v=ntJO1Ckmj4M) feat. @PhoenixGreen, @Exitus, DCR_Jay, and @Laurent.
+- [Decred Roundtable - The next crypto craze](https://www.youtube.com/watch?v=ntJO1Ckmj4M) feat. @phoenixgreen, @Exitus, @DCR\_Jay, and @Laurent.
 
 **Audio:**
 
 Twitter Spaces:
 
-- [Decred’s 7th birthday bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra Feat. Decred Community.
+- [Decred’s 7th birthday bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra feat. Decred community.
 
 **Art and fun:**
 
