--- a/journal/202302.md
+++ b/journal/202302.md
@@ -506,7 +506,7 @@ Secured the following media placements:
 - [Decred News - ERC20 pairs on DEX, new ticket price ATH, exciting new proposals for DCR DAO & more](https://www.youtube.com/watch?v=9fJ92YxL_pU) by @Exitus.
 - [Decrediton SPV mode and importing seed phrase - Decred Fundamentals](https://www.youtube.com/watch?v=K1zUdxsrgJM) by @phoenixgreen
 - [Decrediton peer to peer payments - send & receive](https://www.youtube.com/watch?v=DRWJ9Ajh6II) by @phoenixgreen
-- [David Vorick on Fairness in ASIC Production & Proof-of-Work: A Deep Dive Discussion](https://www.youtube.com/watch?v=n8Wz5Zx0MSs) by @Tivra Feat. David Vorick
+- [David Vorick on Fairness in ASIC Production & Proof-of-Work: A Deep Dive Discussion](https://www.youtube.com/watch?v=n8Wz5Zx0MSs) by @Tivra feat. David Vorick
 - [Bison Relay updates to version 0.1.4](https://www.youtube.com/watch?v=Yz-IPu00eDc) by @phoenixgreen
 
 Livestream:
@@ -517,15 +517,13 @@ Livestream:
 
 Twitter Spaces:
 
-- [Decred’s 7th birthday bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra feat. Decred community.
+- [Decred's 7th birthday bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra feat. Decred community.
 
 **Art and fun:**
 
 - [Decred a crypto unicorn](https://www.decredmagazine.com/decred-a-crypto-unicorn/) by @OfficialCryptos
 
-From the article:
-
-"Decred is a true unicorn among the established cryptocurrencies. It’s commonly described as an extremely versatile creature, a symbol of crypto purity and grace."
+> Decred is a true unicorn among the established cryptocurrencies. It's commonly described as an extremely versatile creature, a symbol of crypto purity and grace.
 
 **Translations:**
 
