--- a/journal/202302.md
+++ b/journal/202302.md
@@ -234,6 +234,7 @@ Ethereum:
 - Build with [go-ethereum](https://github.com/ethereum/go-ethereum) code [by default](https://github.com/decred/dcrdex/pull/2157). go-ethereum is popular Ethereum software that powers ETH and ERC-20 support in DCRDEX. Unlike the DEX, it is licensed as GNU Lesser General Public License (LGPL). The burden of this license may be unacceptable for closed source software willing to use DCRDEX and so a flag was added to exclude go-ethereum from the build.
 - Create wallet directory if it does not exist and [log less details](https://github.com/decred/dcrdex/pull/2159) for RPC provider checks.
 - Enabled ETH and USDC on [mainnet](https://github.com/decred/dcrdex/pull/2013). Adjusted gas limits for latest observation. Reduced redeem transaction confirmations from 10 to 3 since reorgs are [considered](https://github.com/decred/dcrdex/commit/5c1ff8ab05a43b431f6d8e091692c32ea181e937) very unlikely after The Merge. Smart contract enthusiasts can find swap contract for for ETH [here](https://etherscan.io/address/0x8c17e4968b6903e1601be82ca989c5b5e2c7b400#code), for ERC-20 [here](https://etherscan.io/address/0x1bbd020ddd6dc01f974aa74d2d727b2a6782f32d#code).
+- @chappjc [tweeted](https://twitter.com/chappjc/status/1623136803661266947) that new contracts executed many atomic swaps with ETH and USDC on mainnet.
 - Fixed new block headers not being detected over [WebSockets](https://github.com/decred/dcrdex/pull/2091).
 - Fixed attempts to handle [tip change](https://github.com/decred/dcrdex/pull/2138) event for unconnected token wallets.
 - Fixed attempts to use RPC providers that serve [too old block headers](https://github.com/decred/dcrdex/pull/2074) (i.e. are not synced with the network).
@@ -475,7 +476,7 @@ Secured the following media placements:
 
 }
 
-Nostr users can now follow Decred announcements at: `npub1decredzl29afqaalgw79kzz7cscrakzul00zgq9qymt4weqg03fsqmmnzd` ([preview](https://iris.to/#/profile/npub1decredzl29afqaalgw79kzz7cscrakzul00zgq9qymt4weqg03fsqmmnzd)). Post your public keys in [this thread](https://www.reddit.com/r/decred/comments/10vnmmo/decred_on_nostr/) to help bootstrap a Decred community on Nostr.
+Nostr users [can now follow](https://twitter.com/decredproject/status/1626112166448271360) Decred announcements at: `npub1decredzl29afqaalgw79kzz7cscrakzul00zgq9qymt4weqg03fsqmmnzd` ([preview](https://iris.to/#/profile/npub1decredzl29afqaalgw79kzz7cscrakzul00zgq9qymt4weqg03fsqmmnzd)). Post your public keys in [this thread](https://www.reddit.com/r/decred/comments/10vnmmo/decred_on_nostr/) to help bootstrap a Decred community on Nostr.
 
 **Selected articles:**
 
@@ -514,19 +515,21 @@ Livestream:
 
 Twitter Spaces:
 
-- [Bitcoin.jpg: "We're putting it all on chain!"](https://twitter.com/i/spaces/1mrxmkAgoALGy) by @Tivra discussing NFT and Ordinals use case on Bitcoin. ([Anchor](https://anchor.fm/decred-magazine/episodes/Bitcoin-jpg-Were-putting-it-all-on-chain-e1ud6gq))
+- [Bitcoin.jpg: "We're putting it all on chain!"](https://twitter.com/WasPraxis/status/1620938664879554560) by @Tivra discussing NFT and Ordinals use case on Bitcoin. ([Anchor](https://anchor.fm/decred-magazine/episodes/Bitcoin-jpg-Were-putting-it-all-on-chain-e1ud6gq))
 - [Decred's 7th birthday bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra feat. Decred community, discussing seven years of Decred, where it's been, and where it's headed. ([Anchor](https://anchor.fm/decred-magazine/episodes/Decreds-7th-Birthday-Bash-e1um58e))
 - [Fair game or rigged system - On proof-of-work and ASIC production](https://www.decredmagazine.com/fair-game-or-rigged-system-on-proof-of-work-and-asic-production/) by @Tivra feat. David Vorick, discussing his experiences in the ASIC production game and question its fairness. ([Anchor](https://anchor.fm/decred-magazine/episodes/Fair-Game-or-Rigged-System---On-Proof-of-Work-and-ASIC-Production-e1v382d), [YouTube](https://www.youtube.com/watch?v=n8Wz5Zx0MSs))
 
 **Art and fun:**
 
+- [Clay Stakey riding clay bison](https://twitter.com/RichardRed0x/status/1622676008955412480) by @richardred
+- @karamble's animations for [Bison Relay](https://twitter.com/karamblez/status/1624099752555032602), more [Bison Relay](https://twitter.com/karamblez/status/1625176367573700615), and [DCRDEX](https://twitter.com/karamblez/status/1629475704088805378)
 - [Decred a crypto unicorn](https://www.decredmagazine.com/decred-a-crypto-unicorn/) by @OfficialCryptos
 
 > Decred is a true unicorn among the established cryptocurrencies. It's commonly described as an extremely versatile creature, a symbol of crypto purity and grace.
 
 **Translations:**
 
-- {}
+- [Peer-to-peer electronic corporation](https://www.decredmagazine.com/peer-to-peer-electronic-corporation/) by @Tivra - [in Chinese](https://github.com/DominicTing/decred-ZH-translations/blob/master/Peer-to-Peer%20Electronic%20Corporation.md) by @Dominic
 
 **Non-English content:**
 
@@ -540,6 +543,8 @@ Twitter Spaces:
 
 **Other:**
 
+- Educational thread about [how Decred DAO is funded](https://twitter.com/toddfmaki/status/1622136960407183360) by @toddfmaki
+- Educational thread about [Bison Relay](https://twitter.com/karamblez/status/1623621101027835904) by @karamble
 - { _e.g. educational posts and anything that doesn't fall in other categories_ }
 
 
