Media add translations

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -522,7 +522,7 @@ Twitter Spaces:
 **Art and fun:**
 
 - [Clay Stakey riding clay bison](https://twitter.com/RichardRed0x/status/1622676008955412480) by @richardred
-- @karamble's animations for [Bison Relay](https://twitter.com/karamblez/status/1624099752555032602), more [Bison Relay](https://twitter.com/karamblez/status/1625176367573700615), and [DCRDEX](https://twitter.com/karamblez/status/1629475704088805378)
+- @karamble's animations for [Bison Relay](https://twitter.com/karamblez/status/1624099752555032602), more [Bison Relay](https://twitter.com/karamblez/status/1625176367573700615), and [DCRDEX](https://twitter.com/karamblez/status/1629475704088805378) ETH+USDC dev update
 - [Bison Relay stickers](https://www.reddit.com/r/decred/comments/10rvh06/join_the_herd_bison_relay_stickers/) - a design by [@TofuPixel](https://twitter.com/TofuPixel) that can be used on social media or printed as a sticker to promote BR
 - [Decred a crypto unicorn](https://www.decredmagazine.com/decred-a-crypto-unicorn/) by @OfficialCryptos
 
@@ -531,6 +531,7 @@ Twitter Spaces:
 **Translations:**
 
 - [Peer-to-peer electronic corporation](https://www.decredmagazine.com/peer-to-peer-electronic-corporation/) by @Tivra - [in Chinese](https://github.com/DominicTing/decred-ZH-translations/blob/master/Peer-to-Peer%20Electronic%20Corporation.md) by @Dominic
+- Decred Journal December-January got a total of 3 new [translations](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic) and Polish (@kozel). Thank you all for spreading the Decred message!
 
 **Non-English content:**
 
@@ -545,7 +546,6 @@ Twitter Spaces:
 
 - Educational thread about [how Decred DAO is funded](https://twitter.com/toddfmaki/status/1622136960407183360) by @toddfmaki
 - Educational thread about [Bison Relay](https://twitter.com/karamblez/status/1623621101027835904) by @karamble
-- { _e.g. educational posts and anything that doesn't fall in other categories_ }
 
 
 ## Markets
