Drop more hints

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -2,9 +2,9 @@
 
 ![{alt text}](../img/{file.ext} "{hover tooltip text}")
 
-_Image: { "Title by @author. Description..." OR just "Description..." }_
+_Image: Decred Cake 2023 by @arij and @Exitus_ { _upload 202302.1_ }
 
-{ _Month's highlights, no links here, 5-7 bullets max._
+Highlights of February: {
 
 - Decred turned 7 years
 
@@ -22,7 +22,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 }
 
-Contents: { _Sync ToC at the very end, when all text is finished_ }
+Contents:
 
 - [DCRDEX v0.5.9 Release](#dcrdex-v059-release)
 - [Bison Relay v0.1.4 Release](#bison-relay-v014-release)
@@ -82,7 +82,7 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 Most changes focused on making consensus deployment code more robust and easier to understand:
 
-- Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" and "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details. { _can we say deployment ~= agenda for simplicity?_ }
+- Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" and "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details.
 - Enforce [globally unique vote IDs](https://github.com/decred/dcrd/pull/3057) for different agendas. Technically it was not incorrect to reuse vote IDs, however various software in the Decred ecosystem implicitly assumes that IDs are unique across all agendas. This unwritten rule is now formalized to prevent confusion and simplify code dealing with it.
 - Simplified code that tracks the status [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
 - Removed unused [database update tracking](https://github.com/decred/dcrd/pull/3065). { _minor_ }
@@ -224,7 +224,7 @@ Ethereum:
 
 - Added ability for the DEX server to use [multiple Ethereum data providers](https://github.com/decred/dcrdex/pull/2104) and switch to another provider if the current one does not serve needed data.
 - Simplified handling of [best known block](https://github.com/decred/dcrdex/pull/2105). { _minor_ }
-- Clarified API [versioning](https://github.com/decred/dcrdex/pull/2094) of ETH and its child token assets. For now token assets will use the same version as the parent asset. These version numbers will be used to determine if different clients and servers and their components are compatible. { _did not fully grasp what these versions control and added a general explainer. Also it is minor and free to group._ }
+- Clarified API [versioning](https://github.com/decred/dcrdex/pull/2094) of ETH and its child token assets. For now token assets will use the same version as the parent asset. These version numbers will be used to determine if different clients and servers and their components are compatible.
 - Removed the [`isRedeemable` method](https://github.com/decred/dcrdex/pull/2111) from Solidity smart contracts for ETH and ERC-20 swaps, and disabled the use of `estimateRedeemGas` call. Both methods reveal a secret to the Ethereum node ahead of the redeem transaction. This was not a problem when the client was using a private node, but it becomes a vulnerability with public RPC providers, which DEX is forced to use since The Merge. Solidity compiler was updated to v0.8.18.
 - Added monitoring of [RPC provider health](https://github.com/decred/dcrdex/pull/2125). Previously, ETH backend would only start if all configured providers could be connected to and had an updated blockchain. Now ETH backend will start if at least one provider connection works and reports a fresh block. After connection is established providers will be continuously monitored for healthy responses and the best providers will be used first.
 - Made [swap estimates](https://github.com/decred/dcrdex/pull/2129) aware of Ethereum block gas limit.
@@ -239,14 +239,12 @@ Ethereum:
 - Fixed attempts to handle [tip change](https://github.com/decred/dcrdex/pull/2138) event for unconnected token wallets.
 - Fixed attempts to use RPC providers that serve [too old block headers](https://github.com/decred/dcrdex/pull/2074) (i.e. are not synced with the network).
 
-Ethereum's upgrade to proof-of-stake consensus (also called [The Merge](https://ethereum.org/en/upgrades/merge/)) happened to [brick the light client](https://github.com/ethereum/go-ethereum/issues/25623) used by DCRDEX despite some [claims](https://blog.ethereum.org/2021/03/24/finalized-no-24) it will be supported. This has delayed DCRDEX v0.6 quite a bit while a workaround had to be developed. Until [light clients](https://geth.ethereum.org/docs/fundamentals/les) are fixed DEX users will have a choice of running a full node or using centralized chain data providers like [Infura](https://www.infura.io/), [Ankr](https://www.ankr.com/), and [8 others](https://github.com/decred/dcrdex/blob/80b0531a64a806ac8901d812b1e322418118cac1/client/asset/eth/multirpc.go).
+Ethereum's upgrade to proof-of-stake consensus (also called [The Merge](https://ethereum.org/en/upgrades/merge/)) happened to [brick the light client](https://github.com/ethereum/go-ethereum/issues/25623) used by DCRDEX despite some [expectations](https://blog.ethereum.org/2021/03/24/finalized-no-24) it will be supported. This has delayed DCRDEX v0.6 quite a bit while a workaround had to be developed. Until [light clients](https://geth.ethereum.org/docs/fundamentals/les) are fixed DEX users will have a choice of running a full node or using centralized chain data providers like [Infura](https://www.infura.io/), [Ankr](https://www.ankr.com/), and [8 others](https://github.com/decred/dcrdex/blob/80b0531a64a806ac8901d812b1e322418118cac1/client/asset/eth/multirpc.go).
 
 Umbrel app store integration:
 
 - New repository added to Decred GitHub organization for hosting [Umbrel integration](https://github.com/decred/umbrel-app-store) code. Umbrel users can follow the instructions to add the repository and install the DCRDEX package.
 - DCRDEX package was submitted to [official Umrel app store](https://github.com/getumbrel/umbrel-apps/pull/430) for review. Unlike custom Community app stores it requires centralized approval.
-
-{ _any image to show?_ }
 
 
 ### Timestamply
@@ -437,8 +435,6 @@ _Image: Daily mix volume varied more than usual._
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 158 nodes (+11), 305 channels (+44) with a total capacity of 115 DCR (+9), as of Mar 1. These stats vary depending on the LN node. For example, @karamble's node reported 172 nodes (+12), 385 channels (+38) and 168 DCR (+9) capacity on same Mar 1.
 
-{ _Add any interesting analysis or events in the network._ }
-
 
 ## Outreach
 
@@ -465,16 +461,6 @@ Secured the following media placements:
 
 
 ## Media
-
-{ _Scan these to find more Media and Discussions:_
-
-- https://twitter.com/decredproject
-- https://www.reddit.com/r/decred/new/
-- Matrix #media
-- Matrix #marketing
-- Matrix #general
-
-}
 
 Nostr users [can now follow](https://twitter.com/decredproject/status/1626112166448271360) Decred announcements at: `npub1decredzl29afqaalgw79kzz7cscrakzul00zgq9qymt4weqg03fsqmmnzd` ([preview](https://iris.to/#/profile/npub1decredzl29afqaalgw79kzz7cscrakzul00zgq9qymt4weqg03fsqmmnzd)). Post your public keys in [this thread](https://www.reddit.com/r/decred/comments/10vnmmo/decred_on_nostr/) to help bootstrap a Decred community on Nostr.
 
@@ -582,5 +568,5 @@ Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: {}
-- title image: {}
+- title image: { Exitus }
 - funding: Decred stakeholders
