--- a/journal/202302.md
+++ b/journal/202302.md
@@ -510,8 +510,11 @@ The Oasis DeFi protocol was used to "[counter-exploit](https://www.blockworksres
 
 Facebook parent Meta [reported](https://www.coindesk.com/business/2023/02/01/facebook-parent-metas-metaverse-division-lost-137b-in-2022/) losses of $13.7 billion in its Metaverse Division for 2022, and warned that the losses would accelerate further in 2023.
 
+Optimism, a layer 2 Ethereum chain, [performed](https://optimism.mirror.xyz/lPZEkFF7LU2ZlrO-dsV3p_LtWQUaknFGfxFMgSz3vGA) its second airdrop, sending 11.7 million OP tokens to over 300,000 addresses. This airdrop rewarded users who delegated their OP for governance, and users who spent more than $6 on gas fees, along with multipliers for delegating more for longer or using more gas. Optimism is committed to distributing 19% of its supply in airdrops, and the first one in May 2022 distributed 5%. 
+India is [aiming](https://www.coindesk.com/policy/2023/02/08/unpacking-indias-cbdc-pilots-as-country-prepares-for-digital-rupee/) to launch its CBDC by the end of 2023 and has two ongoing trials for a wholesale and retail facing CBDC which have been expanding, but not without difficulty. India already has a ubiquitous Unified Payments Interface (UPI) operated by banks which is widely used and exposes user data to the bank operators - the retail CBDC is seen as a way to offer a more cash-like and privacy respecting means of making payments without bank intermediaries. 
 Optimism, a layer 2 Etherem chain, [performed](https://optimism.mirror.xyz/lPZEkFF7LU2ZlrO-dsV3p_LtWQUaknFGfxFMgSz3vGA) its second airdrop, sending 11.7 million OP tokens to over 300,000 addresses. This airdrop rewarded users who delegated their OP for governance, and users who spent more than $6 on gas fees, along with multipliers for delegating more for longer or using more gas. Optimism is committed to distributing 19% of its supply in airdrops, and the first one in May 2022 distributed 5%.
 
+In January National Australia Bank [became](https://www.afr.com/companies/financial-services/nab-creates-a-stablecoin-in-boost-for-digital-economy-20230117-p5cd8f) the second major Australian bank to create a stablecoin (AUDN) to allow business customers to settle transactions on blockchain technology in real-time using Australian dollars. They aim to launch mid-year and support transactions including overseas payments and carbon credit trading, and the stated purpose is to boost the digital economy. This comes 9 months after Melbourne based rival ANZ created a similar product (A$DC). The Reserve Bank of Australia is exploring use cases for CBDC and will choose some pilot projects in the first half of 2023.
 That's all for February. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
 
