Reorder bits and add bits

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -49,9 +49,9 @@ Bison Relay received another quality of life update with v0.1.4:
 - Everything works faster.
 - Adjustable font size.
 - Image and link attachments.
-- Tipping bot that rewards authors of valuable content.
 - Right-side panel for easier access to actions on users and group chats.
-- More robust key exchange maintenance.
+- More robust maintenance of key exchanges.
+- Tipping bot that rewards authors of valuable content.
 - Many other UX improvements.
 
 Short video overview of new features is available [here](https://www.youtube.com/watch?v=Yz-IPu00eDc).
@@ -337,13 +337,13 @@ _Image: Historical pool hashrate distribution._
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 207-496.5 DCR, with 30-day [average](https://dcrstats.com/) at 263.8 DCR (+51.3).
 
+After a dramatic drop to 140 DCR in January ticket price skyrocketed to set a new all-time high of **496.5 DCR**. It returned to normal levels a week later and settled around 230 DCR.
+
 ![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Staking_Daily_TicketPrice_DCR.png) { _upload 202302.6_ }
 
 _Image: Ticket price made its biggest swing in history._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 8.76-9.69 million DCR, meaning that 58.5-64.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake. This was also more volatile than usual.
-
-After a dramatic drop to 140 DCR in January ticket price skyrocketed to set a new all-time high of **496.5 DCR**. It returned to normal levels a week later and settled around 230 DCR.
 
 ![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Staking_Daily_TicketPoolVal_DCR.png) { _upload 202302.7_ }
 
@@ -392,6 +392,8 @@ Secured the following media placements:
 - A [Decred Magazine article](https://www.decredmagazine.com/planbs-s2f-model-is-flawed/) featuring commentary from @jz on the flaws in PlanB's S2F model.
 - A [Decred Magazine article](https://www.decredmagazine.com/middlemen-need-to-be-eliminated-from-the-cryptocurrency-space/) featuring commentary from @jz on eliminating middlemen from the cryptocurrency space.
 
+Commentary on Decred Magazine was originally drafted for a crypto publication but was not used. Instead of throwing it away it was repurposed and published on DM.
+
 
 ## Events
 
@@ -423,7 +425,7 @@ Decred Magazine engagement stats for February:
 - Social media posts: 143
 - Likes: 678
 - Re-tweets: 148
-- Social media followers across all platforms and accounts: 1,220
+- Social media followers across all platforms and accounts (including [@DecredSociety](https://twitter.com/DecredSociety)): 1,220
 
 Decred Magazine has started building an audience on TikTok. Engagement with [@decredmagazine](https://www.tiktok.com/@decredmagazine) is greatly appreciated.
 
