Events link report

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -399,7 +399,7 @@ Commentary on Decred Magazine was originally drafted for a crypto publication bu
 
 **Attended:**
 
-- @arij organized a celebration of Decred's 7th anniversary at Technopark Casablanca for around 60 guests. The event began with a presentation of the project and its major milestones over the years, followed by remarks from the project's partners. New version of Decred Cake was spotted at the party.
+- @arij organized a celebration of Decred's 7th anniversary at Technopark Casablanca for around 60 guests. The event began with a presentation of the project and its major milestones over the years, followed by remarks from the project's partners. New version of Decred Cake was spotted at the party. See more details in the [report](https://decredcommunity.github.io/events/index/20230205.1).
 
 { image: https://twitter.com/khalidesitra/status/1622964040640208898 -> 2nd photo as 202302.12 }
 
