--- a/journal/202302.md
+++ b/journal/202302.md
@@ -10,7 +10,7 @@ Highlights of February:
 - Decred DEX saw a v0.5.9 bugfix and polish release, and there are extensive reports of heavy dev progress, v0.6 is getting close.
 - Bison Relay v0.1.4 was released, improving UX, and an Oprah tipping bot is now operating on BR.
 - The Timestamply redesign is now live.
-- The ticket price saw an sharp drop followed by epic upswing, which took it to a new all time high.
+- The ticket price saw a sharp drop followed by epic upswing, which took it to a new all time high.
 
 Contents:
 
@@ -23,7 +23,6 @@ Contents:
 - [Outreach](#outreach)
 - [Events](#events)
 - [Media](#media)
-- [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
