--- a/journal/202303.md
+++ b/journal/202303.md
@@ -164,6 +164,15 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 - {}
 
+Umbrel app store integration: {
+
+- rejected for Bitcoin-only reasons
+  - https://matrix.to/#/!mlRZqBtfWHrcmgdTWB:decred.org/$vPLShch0Ds-srF2b8icudQ6XpK25ZiKOWbRQXtcKolg?via=decred.org&via=matrix.org&via=planetdecred.org
+  - https://github.com/getumbrel/umbrel-apps/pull/430
+  - link tweet claiming neutrality
+
+}
+
 
 ### dcrdata
 
@@ -184,6 +193,8 @@ _[Timestamply](https://github.com/decred/dcrtimegui) is a free service for times
 - https://github.com/decred/dcrtimegui
 
 }
+
+- { if anything new: https://proposals.decred.org/record/855a506/comments/18 }
 
 
 ### TinyDecred
@@ -448,19 +459,25 @@ In March DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-{ 
 
 ## Relevant External
 
+{ _Story ideas:
+
+- USDC lost its $1 peg for ~1 day, find what caused it
+- Check if other stablecoins were affected
+
+}
+
 { _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
 
-{ _Hint: Follow or not follow the suggested grouping of stories below._ }
+{ _Hint: Follow or not follow the suggested order of stories below:_
 
-{ _Cryptocurrency L1 tech: PoW, ASIC resistance, full nodes, network security, etc._ }
+- _Cryptocurrency L1 tech: PoW, ASIC resistance, full nodes, network security, etc._
+- _L2+ tech: "Smart" contracts, DEX projects._
+- _Governance, chain forks, community splits, finances, funding._
+- _Relevant exchanges and websites._
+- _Regulations, privacy, security._
+- _Fun stuff._
 
-{ _L2+ tech: "Smart" contracts, DEX projects._ }
-
-{ _Governance, finances, funding, chain forks, community splits._ }
-
-{ _Relevant exchanges and websites._ }
-
-{ _Other: Regulations, privacy, security, fun._ }
+}
 
 That's all for March. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
